[package]
name = "readability"
version = "0.1.0"
description = "Really fast readability."
keywords = ["dom", "html", "text", "extraction"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/loyd/readability.rs"
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "loyd/readability.rs" }

[dependencies]
log = "^0.3.7"
kuchiki = "^0.4.1"
lazy_static = "^0.2.1"
regex = "^0.2.1"
html5ever-atoms = "^0.1.3"
url = "^1.4.0"

[dev-dependencies]
env_logger = "^0.4.2"
